--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -1,5 +1,5 @@
 # variables
-$hypr = ~/.config/hypr
+$hypr = $HOME/.config/hypr
 $scripts = $hypr/scripts
 
 # applications
@@ -7,18 +7,6 @@ $fileManager = dolphin
 $terminal = alacritty
 $menu = tofi-drun
 $browser = firefox
-
-# startup
-exec-once = udiskie &
-exec-once = waybar
-exec-once = fnott
-exec-once = /usr/lib/polkit-kde-authentication-agent-1
-exec-once = wl-paste --watch cliphist store
-exec-once = swayidle &
-exec-once = swww init && $scripts/set-wallpaper.sh
-
-# monitors
-monitor=,preferred,auto,1
 
 # env
 source = $hypr/env/nvidia.conf
@@ -29,6 +17,18 @@ env = WLR_NO_HARDWARE_CURSORS,1
 env = GDK_BACKEND,wayland,x11
 env = SDL_VIDEODRIVER,wayland
 env = CLUTTER_BACKEND,wayland
+
+# startup
+exec-once = udiskie
+exec-once = waybar
+exec-once = fnott
+exec-once = /usr/lib/polkit-kde-authentication-agent-1
+exec-once = wl-paste --watch cliphist store
+exec-once = swayidle -w
+exec-once = swww init && bash $scripts/set-wallpaper.sh
+
+# monitors
+monitor=,preferred,auto,1
 
 general {
     border_size = 2
@@ -161,15 +161,15 @@ bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
 
 # keybinds
-bind = $mainMod, 1, exec, $browser
-bind = $mainMod, 2, exec, $fileManager
-bind = $mainMod, 3, exec, $terminal
-bindr = SUPER, SUPER_L, exec, $menu
+bind = $mainMod, 1, exec, $terminal
+bind = $mainMod, 2, exec, $browser
+bind = $mainMod, 3, exec, $fileManager
 bind = $mainMod SHIFT, V, exec, cliphist list | tofi | cliphist decode | wl-copy
-bind = $mainMod SHIFT, R, exec, bash $scripts/set-wallpaper.sh
+bind = $mainMod, W, exec, bash $scripts/set-wallpaper.sh
+bind = $mainMod, D, exec, bash $scripts/hide-unhide.sh
+bindr = $mainMod, SUPER_L, exec, $menu
 
-# Handle lid close
-bind = $mainMod, S, exec, systemctl suspend
-bindl=,switch:Lid Switch, exec, systemctl suspend
+# Sleep
+bind = $mainMod, S, exec, $scripts/screen-off.sh
 bindl=,switch:on:Lid Switch, exec, hyprctl dispatch dpms on
-bindl=,switch:off:Lid Switch, exec, systemctl suspend
+bindl=,switch:off:Lid Switch, exec, bash $scripts/screen-off.sh
