--- a/.config/swayidle/config
+++ b/.config/swayidle/config
@@ -1,5 +1,3 @@
 timeout 120   'swaylock -efFi "$(random_bg)"; hyprctl dispatch dpms off'
-before-sleep  'swaylock -efFi "$(random_bg)"; hyprctl dispatch dpms off'
-after-resume  'hyprctl dispatch dpms on'
-lock          'swaylock -efFi "$(random_bg)"; hyprctl dispatch dpms off'
-unlock        'hyprctl dispatch dpms on'
+before-sleep  'swaylock -efFi "$(random_bg)"'
+lock          'swaylock -efFi "$(random_bg)"'
