--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -25,7 +25,7 @@ exec-once = fnott
 exec-once = /usr/lib/polkit-kde-authentication-agent-1
 exec-once = wl-paste --watch cliphist store
 exec-once = swayidle -w
-exec-once = swww init && bash $scripts/set-wallpaper.sh
+exec-once = swww init && systemctl --user start change-wallpaper.timer
 
 # monitors
 monitor=,preferred,auto,1
@@ -165,7 +165,7 @@ bind = $mainMod, 1, exec, $terminal
 bind = $mainMod, 2, exec, $browser
 bind = $mainMod, 3, exec, $fileManager
 bind = $mainMod SHIFT, V, exec, cliphist list | tofi | cliphist decode | wl-copy
-bind = $mainMod, W, exec, bash $scripts/set-wallpaper.sh
+bind = $mainMod, W, exec, change-wallpaper
 bind = $mainMod, D, exec, bash $scripts/hide-unhide.sh
 bindr = $mainMod, SUPER_L, exec, $menu
 
