--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -1,3 +1,6 @@
+## WIP :
+# -- scripts/hide-unhide.sh
+# -- eww
 # variables
 $hypr = $HOME/.config/hypr
 $scripts = $hypr/scripts
@@ -20,7 +23,7 @@ env = CLUTTER_BACKEND,wayland
 
 # startup
 exec-once = udiskie
-exec-once = waybar
+exec-once = eww daemon && eww open bar
 exec-once = fnott
 exec-once = /usr/lib/polkit-kde-authentication-agent-1
 exec-once = wl-paste --watch cliphist store
