--- a/.config/alacritty/alacritty.toml
+++ b/.config/alacritty/alacritty.toml
@@ -36,19 +36,19 @@ TERM = "xterm-256color"
 size = 13
 
 [font.bold]
-family = "JetBrainsMono NF"
+family = "JetBrainsMonoNerdFont"
 style = "Bold"
 
 [font.bold_italic]
-family = "JetBrainsMono NF"
+family = "JetBrainsMonoNerdFont"
 style = "Bold Italic"
 
 [font.italic]
-family = "JetBrainsMono NF"
+family = "JetBrainsMonoNerdFont"
 style = "Italic"
 
 [font.normal]
-family = "JetBrainsMono NF"
+family = "JetBrainsMonoNerdFont"
 style = "Regular"
 
 [[keyboard.bindings]]
