--- a/.config/swayidle/config
+++ b/.config/swayidle/config
@@ -1,3 +1,3 @@
-timeout 120   'swaylock -efFi "$(random_bg)"; hyprctl dispatch dpms off'
-before-sleep  'swaylock -efFi "$(random_bg)"'
-lock          'swaylock -efFi "$(random_bg)"'
+timeout 120   'swaylock && sleep 5 && hyprctl dispatch dpms off'
+before-sleep  'swaylock'
+lock          'swaylock'
