--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -23,12 +23,14 @@ env = CLUTTER_BACKEND,wayland
 
 # startup
 exec-once = udiskie
-exec-once = eww daemon && eww open bar
+exec-once = eww daemon
+exec-once = eww open bar
 exec-once = fnott
 exec-once = /usr/lib/polkit-kde-authentication-agent-1
 exec-once = wl-paste --watch cliphist store
 exec-once = swayidle -w
-exec-once = swww init && systemctl --user start change-wallpaper.timer
+exec-once = swww init
+exec = systemctl --user restart change-wallpaper.timer
 
 # monitors
 monitor=,preferred,auto,1
