--- a/.config/hypr/env/nvidia.conf
+++ b/.config/hypr/env/nvidia.conf
@@ -1,4 +1,4 @@
 env = LIBVA_DRIVER_NAME,nvidia
-# env = GBM_BACKEND,nvidia-drm
+env = GBM_BACKEND,nvidia-drm
 env = __GLX_VENDOR_LIBRARY_NAME,nvidia
 # env = __NV_PRIME_RENDER_OFFLOAD,1
