--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -1,15 +1,16 @@
 ## WIP :
 # -- scripts/hide-unhide.sh
 # -- eww
+
 # variables
-$hypr = $HOME/.config/hypr
+$hypr    = $HOME/.config/hypr
 $scripts = $hypr/scripts
 
 # applications
 $fileManager = dolphin
-$terminal = alacritty
-$menu = tofi-drun
-$browser = firefox
+$terminal    = alacritty
+$menu        = tofi-drun | xargs hyprctl dispatch exec --
+$browser     = firefox
 
 # env
 source = $hypr/env/nvidia.conf
@@ -33,7 +34,7 @@ exec-once = swww init
 exec = systemctl --user restart change-wallpaper.timer
 
 # monitors
-monitor=,preferred,auto,1
+monitor = ,preferred,auto,1
 
 general {
     border_size = 2
@@ -78,9 +79,7 @@ misc {
 
 animations {
     enabled = yes
-
     bezier = myBezier, 0.05, 0.9, 0.1, 1.05
-
     animation = windows, 1, 7, myBezier
     animation = windowsOut, 1, 7, default, popin 80%
     animation = border, 1, 10, default
@@ -104,7 +103,7 @@ master {
 # Example per-device config
 # See https://wiki.hyprland.org/Configuring/Keywords/#executing for more
 device:epic-mouse-v1 {
-    sensitivity = -0.5
+    sensitivity = 0
 }
 
 # Example windowrule v1
@@ -166,15 +165,20 @@ bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
 
 # keybinds
-bind = $mainMod, 1, exec, $terminal
-bind = $mainMod, 2, exec, $browser
-bind = $mainMod, 3, exec, $fileManager
-bind = $mainMod SHIFT, V, exec, cliphist list | tofi | cliphist decode | wl-copy
-bind = $mainMod, W, exec, change-wallpaper
-bind = $mainMod, D, exec, bash $scripts/hide-unhide.sh
-bindr = $mainMod, SUPER_L, exec, $menu
+bind  = $mainMod,       1,       exec, $terminal
+bind  = $mainMod,       2,       exec, $browser
+bind  = $mainMod,       3,       exec, $fileManager
+bind  = $mainMod SHIFT, V,       exec, cliphist list | tofi | cliphist decode | wl-copy
+bind  = $mainMod,       W,       exec, change-wallpaper
+bind  = $mainMod,       D,       exec, bash $scripts/hide-unhide.sh
+bindr = $mainMod,       SUPER_L, exec, $menu
 
 # Sleep
 bind = $mainMod, S, exec, $scripts/screen-off.sh
 bindl=,switch:on:Lid Switch, exec, hyprctl dispatch dpms on
 bindl=,switch:off:Lid Switch, exec, bash $scripts/screen-off.sh
+
+# audio binds
+bindel = , XF86AudioRaiseVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%+
+bindel = , XF86AudioLowerVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%-
+bindl  = , XF86AudioMute, exec, wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle
