--- a/.ssh/config
+++ b/.ssh/config
@@ -1,5 +1,5 @@
 Host github.com
-	IdentityFile /home/jagteshver/.ssh/github
+	IdentityFile ~/.ssh/github
 	IdentitiesOnly yes
 	AddKeysToAgent yes
 
