--- a/.config/hypr/hypridle.conf
+++ b/.config/hypr/hypridle.conf
@@ -1,5 +1,5 @@
 $lock_cmd = pidof hyprlock || hyprlock
-$suspend_cmd = pidof steam || systemctl suspend || loginctl suspend # fuck nvidia
+# $suspend_cmd = pidof steam || systemctl suspend || loginctl suspend # fuck nvidia
 
 general {
     lock_cmd = $lock_cmd
@@ -17,7 +17,7 @@ listener {
     on-resume = hyprctl dispatch dpms on
 }
 
-listener {
-    timeout = 540 # 9mins
-    on-timeout = $suspend_cmd
-}
+# listener {
+#     timeout = 540 # 9mins
+#     on-timeout = $suspend_cmd
+# }
