--- a/.config/hypr/hyprland/keybinds.conf
+++ b/.config/hypr/hyprland/keybinds.conf
@@ -57,9 +57,9 @@ bindl= Super+Shift, P, exec, playerctl play-pause
 bindl= ,XF86AudioPlay, exec, playerctl play-pause
 
 # Lock screen
-bind = Super, L, exec, loginctl lock-session
-bind = Super+Shift, L, exec, loginctl lock-session
-bindl = Super+Shift, L, exec, sleep 0.1 && systemctl suspend || loginctl suspend
+bind = Super, L, exec, hyprlock #loginctl lock-session
+# bind = Super+Shift, L, exec, loginctl lock-session
+# bindl = Super+Shift, L, exec, sleep 0.1 && systemctl suspend || loginctl suspend
 
 # Change / Open app
 #bindir = Super, Super_L, exec, tofi-run | xargs -i{} alacritty -e {}
