--- a/.config/hypr/hyprlock.conf
+++ b/.config/hypr/hyprlock.conf
@@ -10,6 +10,12 @@ $font_family = Rubik Light
 $font_family_clock = Rubik Light
 $font_material_symbols = Material Symbols Rounded
 
+general {
+  hide_cursor = true
+  grace = 5
+  ignore_empty_input = true
+}
+
 background {
     # color = rgba(170C04FF)
     color = rgba(000000FF)
@@ -36,7 +42,8 @@ input-field {
 
 label { # Clock
     monitor =
-    text = $TIME
+    # text = $TIME
+    text = cmd[update:1000] date +'%H:%M:%S'
     shadow_passes = 1
     shadow_boost = 0.5
     color = $text_color
