--- a/.config/hypr/hyprland/keybinds.conf
+++ b/.config/hypr/hyprland/keybinds.conf
@@ -31,7 +31,7 @@ bind = Control+Super, T, exec, ~/.local/bin/change-wallpaper
 # Screenshot, Record, OCR, Color picker, Clipboard history
 bind = Super+Shift+Alt, S, exec, grim -g "$(slurp)" - | swappy -f -
 bindl=, Print, exec, grim - | wl-copy
-bindl= Control,Print, exec, mkdir -p ~/Pictures/Screenshots && ~/.local/bin/grimblast.sh copysave screen ~/Pictures/Screenshots/Screenshot_"$(date '+%Y-%m-%d_%H.%M.%S')".png
+bindl= Control,Print, exec, ~/.local/bin/grimblast.sh copysave screen ~/Pictures/Screenshots/"$(date '+%Y-%m-%d_%H.%M.%S')".png
 bind = Super+Shift, S, exec, ~/.local/bin/grimblast.sh --freeze copy area
 bind = Super+Alt, R, exec, ~/.local/bin/record-script.sh
 bind = Control+Alt, R, exec, ~/.local/bin/record-script.sh --fullscreen
@@ -46,6 +46,7 @@ bind = Control+Super+Shift,S,exec,grim -g "$(slurp $SLURP_ARGS)" "tmp.png" && te
 bind = Super+Shift,T,exec,grim -g "$(slurp $SLURP_ARGS)" "tmp.png" && tesseract -l eng "tmp.png" - | wl-copy && rm "tmp.png"
 # Japanese
 bind = Super+Shift,J,exec,grim -g "$(slurp $SLURP_ARGS)" "tmp.png" && tesseract -l jpn "tmp.png" - | wl-copy && rm "tmp.png"
+bind = Super+Shift+Ctrl,J,exec,grim -g "$(slurp $SLURP_ARGS)" "tmp.png" && tesseract -l jpn_vert "tmp.png" - | wl-copy && rm "tmp.png"
 
 # Media
 bindl= Super+Shift, N, exec, playerctl next || playerctl position `bc <<< "100 * $(playerctl metadata mpris:length) / 1000000 / 100"`
