--- a/.config/hypr/hyprland/keybinds.conf
+++ b/.config/hypr/hyprland/keybinds.conf
@@ -16,9 +16,10 @@ bind = Super, E, exec, pcmanfm
 bind = Super, W, exec, firefox
 bind = Super, X, exec, alacritty -e nvim
 
-# Apps: Settings and config
+# Apps: Settings, config and notification center
 bind = Control+Super, V, exec, easyeffects
 bind = Control+Shift, Escape, exec, alacritty -e htop
+bind = Meta, S, exec, swaync-client -t -sw
 
 # Actions
 bind = Super, Period, exec, pkill fuzzel || ~/.local/bin/fuzzel-emoji
