--- a/.config/hypr/hyprland/keybinds.conf
+++ b/.config/hypr/hyprland/keybinds.conf
@@ -12,14 +12,14 @@ bindle=, XF86MonBrightnessDown, exec, brightnessctl set '12.75-'
 # ################################### Applications ###################################
 # Apps: just normal apps
 bind = Super, T, exec, alacritty
-bind = Super, E, exec, pcmanfm
+bind = Super, E, exec, alacritty -e yazi
 bind = Super, W, exec, firefox
 bind = Super, X, exec, alacritty -e nvim
 
 # Apps: Settings, config and notification center
 bind = Control+Super, V, exec, easyeffects
-bind = Control+Shift, Escape, exec, alacritty -e htop
-bind = Meta, S, exec, swaync-client -t -sw
+bind = Control+Shift, Escape, exec, alacritty -e btop
+bind = Super, S, exec, swaync-client -t -sw
 
 # Actions
 bind = Super, Period, exec, pkill fuzzel || ~/.local/bin/fuzzel-emoji
@@ -159,7 +159,7 @@ bind = Super, 7, exec, ~/.config/ags/scripts/hyprland/workspace_action.sh worksp
 bind = Super, 8, exec, ~/.config/ags/scripts/hyprland/workspace_action.sh workspace 8
 bind = Super, 9, exec, ~/.config/ags/scripts/hyprland/workspace_action.sh workspace 9
 bind = Super, 0, exec, ~/.config/ags/scripts/hyprland/workspace_action.sh workspace 10
-bind = Super, S, togglespecialworkspace,
+# bind = Super, S, togglespecialworkspace,
 bind = Control+Super, S, togglespecialworkspace,
 bind = Alt, Tab, bringactivetotop,   # bring it to the top
 
