--- a/.config/hypr/hyprland/colors.conf
+++ b/.config/hypr/hyprland/colors.conf
@@ -1,4 +1,4 @@
-# exec = export SLURP_ARGS='-d -c FFDAD4BB -b 673B3444 -s 00000000'
+exec = export SLURP_ARGS='-d -c FFDAD4BB -b 673B3444 -s 00000000'
 
 general {
     col.active_border = rgba(33ccffee) rgba(00ff99ee) 45deg
