--- a/.config/hypr/hyprland/env.conf
+++ b/.config/hypr/hyprland/env.conf
@@ -5,20 +5,19 @@ env = SDL_VIDEODRIVER,wayland
 env = CLUTTER_BACKEND,wayland
 
 # ######### Input method ##########
-env = GLFW_IM_MODULE, ibus
+env = GLFW_IM_MODULE,ibus
 
 # ############ Themes #############
-env = QT_QPA_PLATFORMTHEME, qt5ct
+env = QT_QPA_PLATFORMTHEME,qt5ct
 env = QT_AUTO_SCREEN_SCALE_FACTOR,1
 env = QT_WAYLAND_DISABLE_WINDOWDECORATION,1
+env = QT_STYLE_OVERRIDE,kvantum
 
 # ############ NVIDIA #############
 env = LIBVA_DRIVER_NAME,nvidia
-env = __GLX_VENDOR_LIBRARY_NAME,nvidia
 env = NVD_BACKEND,direct
 
 # ############ XDG SESSION #############
 env = XDG_SESSION_TYPE,wayland
 env = XDG_CURRENT_DESKTOP,Hyprland
 env = XDG_SESSION_DESKTOP,Hyprland
-
