--- a/.config/hypr/hyprland/general.conf
+++ b/.config/hypr/hyprland/general.conf
@@ -69,7 +69,7 @@ dwindle {
 
 decoration {
     rounding = 20
-    
+
     # I like keeping very less blur
     blur {
         enabled = true
@@ -85,17 +85,19 @@ decoration {
         popups_ignorealpha = 0.6
     }
     # Shadow
-    drop_shadow = false
-    shadow_ignore_window = true
-    shadow_range = 20
-    shadow_offset = 0 2
-    shadow_render_power = 2
-    col.shadow = rgba(0000001A)
-    
+    shadow {
+      enabled = false
+      ignore_window = true
+      range = 20
+      offset = 0 2
+      render_power = 2
+      color = rgba(0000001A)
+    }
+
     # Shader
     # screen_shader = ~/.config/hypr/shaders/nothing.frag
     # screen_shader = ~/.config/hypr/shaders/vibrance.frag
-    
+
     # Dim
     dim_inactive = true
     dim_strength = 0.1
@@ -145,8 +147,8 @@ misc {
     focus_on_activate = true
     animate_manual_resizes = false
     animate_mouse_windowdragging = true
-    enable_swallow = true
-    swallow_regex = ^(a|A)lacritty$
+    # enable_swallow = true
+    # swallow_regex = ^(a|A)lacritty$
     
     force_default_wallpaper = -1
     new_window_takes_over_fullscreen = 2
