--- a/.config/hypr/hyprland/keybinds.conf
+++ b/.config/hypr/hyprland/keybinds.conf
@@ -1,6 +1,5 @@
 # ################### It just works™ keybinds ###################
 # Volume
-#bindl = ,switch:55854544cab0,exec,hyprlock
 bindl = ,XF86AudioMute, exec, wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle
 bindle=, XF86AudioRaiseVolume, exec, wpctl set-mute @DEFAULT_AUDIO_SINK@ 0 && wpctl set-volume -l 1.5 @DEFAULT_AUDIO_SINK@ 5%+
 bindle=, XF86AudioLowerVolume, exec, wpctl set-mute @DEFAULT_AUDIO_SINK@ 0 && wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%-
@@ -64,9 +63,7 @@ bind = Super, L, exec, hyprlock #loginctl lock-session
 # bindl = Super+Shift, L, exec, sleep 0.1 && systemctl suspend || loginctl suspend
 
 # Change / Open app
-#bindir = Super, Super_L, exec, tofi-run | xargs -i{} alacritty -e {}
 bindir = Super, Super_L, exec, alacritty -e "$(tofi-run)"
-bind = Alt, Tab, cyclenext
 # bind = Alt, Space, exec, change-to-window
 
 # ##################################### AGS keybinds #####################################
@@ -90,13 +87,6 @@ bind = Alt, Tab, cyclenext
 # bindl  = , XF86AudioMute, exec, ags run-js 'indicator.popup(1);'
 # bindl  = Super+Shift,M,   exec, ags run-js 'indicator.popup(1);'
 
-# ##################################### Plugins #########################################
-
-# Testing
-# bind = SuperAlt, f12, exec, notify-send "Hyprland version: $(hyprctl version | head -2 | tail -1 | cut -f2 -d ' ')" "owo" -a 'Hyprland keybind'
-# bind = Super+Alt, f12, exec, notify-send "Millis since epoch" "$(date +%s%N | cut -b1-13)" -a 'Hyprland keybind'
-# bind = Super+Alt, f12, exec, notify-send 'Test notification' "Here's a really long message to test truncation and wrapping\nYou can middle click or flick this notification to dismiss it!" -a 'Shell' -A "Test1=I got it!" -A "Test2=Another action" -t 5000
-# bind = Super+Alt, Equal, exec, notify-send "Urgent notification" "Ah hell no" -u critical -a 'Hyprland keybind'
 
 # ########################### Keybinds for Hyprland ############################
 # Swap windows
@@ -105,6 +95,7 @@ bind = Super+Shift, right, movewindow, r
 bind = Super+Shift, up, movewindow, u
 bind = Super+Shift, down, movewindow, d
 bind = Super, P, pin
+
 # Move focus
 bind = Super, left, movefocus, l
 bind = Super, right, movefocus, r
@@ -116,26 +107,30 @@ bind = Super, BracketRight, movefocus, r
 # Workspace, window, tab switch with keyboard
 bind = Control+Super, right, workspace, +1
 bind = Control+Super, left, workspace, -1
+bind = Control+Super, up, workspace, -5
+bind = Control+Super, down, workspace, +5
 bind = Super, mouse:275, workspace, -1
 bind = Super, mouse:276, workspace, +1
 bind = Control+Super, BracketLeft, workspace, -1
 bind = Control+Super, BracketRight, workspace, +1
-bind = Control+Super, up, workspace, -5
-bind = Control+Super, down, workspace, +5
-bind = Super, Page_Down, workspace, +1
-bind = Super, Page_Up, workspace, -1
-bind = Control+Super, Page_Down, workspace, +1
-bind = Control+Super, Page_Up, workspace, -1
-bind = Super+Alt, Page_Down, movetoworkspace, +1
-bind = Super+Alt, Page_Up, movetoworkspace, -1
-bind = Super+Shift, Page_Down, movetoworkspace, +1
-bind = Super+Shift, Page_Up, movetoworkspace, -1
+
+# Workspace, window, tab moves with keyboard
 bind = Control+Super+Shift, Right, movetoworkspace, +1
 bind = Control+Super+Shift, Left, movetoworkspace, -1
 bind = Super+Shift, mouse_down, movetoworkspace, -1
 bind = Super+Shift, mouse_up, movetoworkspace, +1
-bind = Super+Alt, mouse_down, movetoworkspace, -1
-bind = Super+Alt, mouse_up, movetoworkspace, +1
+
+# Scroll through existing workspaces with (Control) + Super + scroll
+bind = Super, mouse_up, workspace, +1
+bind = Super, mouse_down, workspace, -1
+bind = Control+Super, mouse_up, workspace, +1
+bind = Control+Super, mouse_down, workspace, -1
+
+# Move/resize windows with Super + LMB/RMB and dragging
+bindm = Super, mouse:272, movewindow
+bindm = Super, mouse:273, resizewindow
+bindm = Super, Z, movewindow
+bind = Control+Super, Backslash, resizeactive, exact 640 480
 
 # Window split ratio
 binde = Super, Minus, splitratio, -0.1
@@ -146,7 +141,6 @@ binde = Super, Apostrophe, splitratio, 0.1
 # Fullscreen
 bind = Super, F, fullscreen, 1
 bind = Super_Shift, F, fullscreen, 0
-# bind = Super_Alt, F, fakefullscreen, 0
 
 # Switching
 bind = Super, 1, exec, ~/.config/ags/scripts/hyprland/workspace_action.sh workspace 1
@@ -159,9 +153,8 @@ bind = Super, 7, exec, ~/.config/ags/scripts/hyprland/workspace_action.sh worksp
 bind = Super, 8, exec, ~/.config/ags/scripts/hyprland/workspace_action.sh workspace 8
 bind = Super, 9, exec, ~/.config/ags/scripts/hyprland/workspace_action.sh workspace 9
 bind = Super, 0, exec, ~/.config/ags/scripts/hyprland/workspace_action.sh workspace 10
-# bind = Super, S, togglespecialworkspace,
 bind = Control+Super, S, togglespecialworkspace,
-bind = Alt, Tab, bringactivetotop,   # bring it to the top
+bind = Alt, Tab, cyclenext
 
 # Move window to workspace Super + Alt + [0-9]
 bind = Super+Alt, 1, exec, ~/.config/ags/scripts/hyprland/workspace_action.sh movetoworkspacesilent 1
@@ -176,28 +169,4 @@ bind = Super+Alt, 9, exec, ~/.config/ags/scripts/hyprland/workspace_action.sh mo
 bind = Super+Alt, 0, exec, ~/.config/ags/scripts/hyprland/workspace_action.sh movetoworkspacesilent 10
 bind = Control+Shift+Super, Up, movetoworkspacesilent, special
 bind = Super+Alt, S, movetoworkspacesilent, special
-
-# Scroll through existing workspaces with (Control) + Super + scroll
-bind = Super, mouse_up, workspace, +1
-bind = Super, mouse_down, workspace, -1
-bind = Control+Super, mouse_up, workspace, +1
-bind = Control+Super, mouse_down, workspace, -1
-
-# Move/resize windows with Super + LMB/RMB and dragging
-bindm = Super, mouse:272, movewindow
-bindm = Super, mouse:273, resizewindow
-# bindm = Super, mouse:274, movewindow
-bindm = Super, Z, movewindow
-bind = Control+Super, Backslash, resizeactive, exact 640 480
-
-# Arrow keys with IJKL
-# bindle = Alt, I, exec, ydotool key 103:1 103:0
-# bindle = Alt, K, exec, ydotool key 108:1 108:0
-# bindle = Alt, J, exec, ydotool key 105:1 105:0
-# bindle = Alt, L, exec, ydotool key 106:1 106:0
-# Control + Side mouse btn for switching tabs (Ctrl+PgUp/PgDn)
-# bind = Control, mouse:275, exec, ydotool key 29:1 104:1 104:0 29:0
-# bind = Control, mouse:276, exec, ydotool key 29:1 109:1 109:0 29:0
-
-
 
