--- a/.config/hypr/hyprland/keybinds.conf
+++ b/.config/hypr/hyprland/keybinds.conf
@@ -11,6 +11,7 @@ bindle=, XF86MonBrightnessDown, exec, brightnessctl set '12.75-'
 # ################################### Applications ###################################
 # Apps: just normal apps
 bind = Super, T, exec, alacritty
+bind = Super_Ctrl_Shift, T, exec, alacritty --class floating
 bind = Super, E, exec, alacritty -e yazi
 bind = Super, W, exec, firefox
 bind = Super, X, exec, alacritty -e nvim
@@ -58,9 +59,9 @@ bindl= Super+Shift, P, exec, playerctl play-pause
 bindl= ,XF86AudioPlay, exec, playerctl play-pause
 
 # Lock screen
-bind = Super, L, exec, hyprlock #loginctl lock-session
-# bind = Super+Shift, L, exec, loginctl lock-session
-# bindl = Super+Shift, L, exec, sleep 0.1 && systemctl suspend || loginctl suspend
+bind = Super, L, exec, loginctl lock-session
+bind = Super+Shift, L, exec, loginctl lock-session
+bindl = Super+Shift, L, exec, sleep 0.1 && systemctl suspend || loginctl suspend
 
 # Change / Open app
 bindir = Super, Super_L, exec, alacritty -e "$(tofi-run)"
