--- a/.config/hypr/hyprland/execs.conf
+++ b/.config/hypr/hyprland/execs.conf
@@ -1,8 +1,10 @@
 # Bar, wallpaper
 exec-once = swww-daemon --format xrgb
+# exec-once = ags &
 
 # Core components (authentication, lock screen, notification daemon)
-exec-once = /usr/lib/polkit-kde-authentication-agent-1
+# exec-once = gnome-keyring-daemon --start --components=secrets
+# exec-once = /usr/lib/polkit-kde-authentication-agent-1
 # exec-once = hypridle
 exec-once = dbus-update-activation-environment --all
 exec-once = sleep 1 && dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP # Some fix idk
