--- a/.config/hypr/hyprland/general.conf
+++ b/.config/hypr/hyprland/general.conf
@@ -3,11 +3,6 @@
 
 monitor = eDP-1, 1920x1080, 1920x0, 1.2
 monitor = HDMI-A-1, 1920x1080, 0x0, 1
-# HDMI port: mirror display. To see device name, use `hyprctl monitors`
-# monitor=HDMI-A-1,1920x1080@60,1920x0,1,mirror,eDP-1
-# monitor=eDP-1,1920x1080@60,-1600x0,1.2,
-# monitor=eDP-1,1920x1080@60,-1920x0,1,
-# monitor=HDMI-A-1,1920x1080@60,0x0,1,
 
 input {
     # Keyboard: Add a layout and uncomment kb_options for Win+Space switching shortcut
@@ -35,7 +30,7 @@ binds {
 gestures {
     workspace_swipe = true
     workspace_swipe_distance = 700
-    workspace_swipe_fingers = 3
+    workspace_swipe_fingers = 4
     workspace_swipe_cancel_ratio = 0.2
     workspace_swipe_min_speed_to_force = 5
     workspace_swipe_direction_lock = true
@@ -45,6 +40,7 @@ gestures {
 
 general {
     # Gaps and border
+    gaps_in = 4
     gaps_out = 5
     gaps_workspaces = 50
     border_size = 1
@@ -73,7 +69,7 @@ decoration {
     # I like keeping very less blur
     blur {
         enabled = true
-        xray = true
+        xray = false
         special = false
         new_optimizations = true
         size = 3
@@ -81,17 +77,18 @@ decoration {
         brightness = 1
         noise = 0.01
         contrast = 1
-        popups = true
+        popups = false
         popups_ignorealpha = 0.6
     }
+
     # Shadow
     shadow {
-      enabled = false
-      ignore_window = true
-      range = 20
-      offset = 0 2
-      render_power = 2
-      color = rgba(0000001A)
+        enabled = true
+        ignore_window = true
+        range = 20
+        offset = 0 2
+        render_power = 4
+        color = rgba(0000002A)
     }
 
     # Shader
@@ -147,8 +144,8 @@ misc {
     focus_on_activate = true
     animate_manual_resizes = false
     animate_mouse_windowdragging = true
-    # enable_swallow = true
-    # swallow_regex = ^(a|A)lacritty$
+    enable_swallow = true
+    swallow_regex = ^((a|A)lacritty|foot)$
     
     force_default_wallpaper = -1
     new_window_takes_over_fullscreen = 2
