--- a/.config/hypr/hyprland/keybinds.conf
+++ b/.config/hypr/hyprland/keybinds.conf
@@ -4,6 +4,9 @@ bindl = ,XF86AudioMute, exec, wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle
 bindle=, XF86AudioRaiseVolume, exec, wpctl set-mute @DEFAULT_AUDIO_SINK@ 0 && wpctl set-volume -l 1.5 @DEFAULT_AUDIO_SINK@ 5%+
 bindle=, XF86AudioLowerVolume, exec, wpctl set-mute @DEFAULT_AUDIO_SINK@ 0 && wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%-
 
+#SPL TEMP
+bind = Super,R,resizeactive,exact 1920 420
+
 # Brightness
 bindle=, XF86MonBrightnessUp, exec, brightnessctl set '12.75+'
 bindle=, XF86MonBrightnessDown, exec, brightnessctl set '12.75-'
