--- a/.config/hypr/hyprland/execs.conf
+++ b/.config/hypr/hyprland/execs.conf
@@ -6,8 +6,8 @@
 
 # Core components (authentication, lock screen, notification daemon)
 # exec-once = gnome-keyring-daemon --start --components=secrets
-exec-once = dbus-update-activation-environment --all
-exec-once = sleep 1 && dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP # Some fix idk
+# exec-once = dbus-update-activation-environment --all
+# exec-once = sleep 1 && dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP # Some fix idk
 
 # Clipboard: history
 exec-once = wl-paste --type text --watch cliphist store
