--- a/.config/hypr/hypridle.conf
+++ b/.config/hypr/hypridle.conf
@@ -1,23 +1,23 @@
 $lock_cmd = pidof hyprlock || hyprlock
-$suspend_cmd = pidof steam || systemctl suspend || loginctl suspend # fuck nvidia
+
+# for future use if decided
+# $suspend_cmd = pidof steam || systemctl suspend || loginctl suspend # fuck nvidia
 
 general {
     lock_cmd = $lock_cmd
     before_sleep_cmd = $lock_cmd
+    after_sleep_cmd = hyprctl dispatch dpms on
 }
 
+# lock after 3 min
 listener {
     timeout = 180 # 3mins
     on-timeout = $lock_cmd
 }
 
+# turn off displays after 5 sec of lock
 listener {
-    timeout = 240 # 4mins
+    timeout = 185 # 3mins 5sec
     on-timeout = hyprctl dispatch dpms off
     on-resume = hyprctl dispatch dpms on
 }
-
-# listener {
-#     timeout = 540 # 9mins
-#     on-timeout = $suspend_cmd
-# }
