--- a/.config/hypr/hyprland/keybinds.conf
+++ b/.config/hypr/hyprland/keybinds.conf
@@ -1,176 +1,177 @@
-# ################### It just works™ keybinds ###################
-# Volume
+# # ################################### Spl Fn-Keys ###################################
+# Audio
 bindl = ,XF86AudioMute, exec, wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle
 bindle=, XF86AudioRaiseVolume, exec, wpctl set-mute @DEFAULT_AUDIO_SINK@ 0 && wpctl set-volume -l 1.5 @DEFAULT_AUDIO_SINK@ 5%+
 bindle=, XF86AudioLowerVolume, exec, wpctl set-mute @DEFAULT_AUDIO_SINK@ 0 && wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%-
-
-#SPL TEMP
-bind = Super,R,resizeactive,exact 1920 420
-
-# Brightness
+# Media Controls
+bindl = ,XF86AudioPlay, exec, playerctl play-pause
+bindl = ,XF86AudioStop, exec, playerctl pause
+bindl = ,XF86AudioNext, exec, playerctl next || playerctl position `bc <<< "100 * $(playerctl metadata mpris:length) / 1000000 / 100"`
+bindl = ,XF86AudioPrev, exec, playerctl previous || playerctl position `bc <<< "100 * $(playerctl metadata mpris:length) / 1000000 / 100"`
+# Brightness Controls
 bindle=, XF86MonBrightnessUp, exec, brightnessctl set '12.75+'
 bindle=, XF86MonBrightnessDown, exec, brightnessctl set '12.75-'
+# Some spl keys ( available on my keyboard so y not )
+bindl =, XF86Mail, exec, firefox gmail.com
+bindl =, XF86Search, exec, firefox
 
-# ################################### Applications ###################################
+# # ################################### Applications ###################################
 # Apps: just normal apps
 bind = Super, T, exec, alacritty
-bind = Super_Ctrl_Shift, T, exec, alacritty --class floating
+bind = Super_Shift, T, exec, alacritty --class Floating:Alacritty
 bind = Super, E, exec, alacritty -e yazi
 bind = Super, W, exec, firefox
 bind = Super, X, exec, alacritty -e nvim
 
 # Apps: Settings, config and notification center
-bind = Control+Super, V, exec, easyeffects
-bind = Control+Shift, Escape, exec, alacritty -e btop
+bind = Ctrl_Super, V, exec, easyeffects
+bind = Ctrl_Shift, Escape, exec, alacritty -e btop
 bind = Super, S, exec, swaync-client -t -sw
 
 # Actions
 bind = Super, Period, exec, pkill fuzzel || ~/.local/bin/fuzzel-emoji
 bind = Super, C, killactive
 bind = Super, Q, exec, hyprctl kill
-bind = Super+Shift, V, togglefloating,
-bind = Control+Shift+Alt, Delete, exec, pkill wlogout || wlogout -p layer-shell
-bind = Control+Super, T, exec, ~/.local/bin/change-wallpaper
+bind = Super_Shift, V, togglefloating,
+bind = Ctrl_Shift_Alt, Delete, exec, pkill wlogout || wlogout -p layer-shell
+bind = Ctrl_Super, T, exec, ~/.local/bin/change-theme -l
 
 # Screenshot, Record, OCR, Color picker, Clipboard history
-bind = Super+Shift+Alt, S, exec, grim -g "$(slurp)" - | swappy -f -
-bindl=, Print, exec, grim - | wl-copy
-bindl= Control,Print, exec, ~/.local/bin/grimblast.sh copysave screen ~/Pictures/Screenshots/"$(date '+%Y-%m-%d_%H.%M.%S')".png
-bind = Super+Shift, S, exec, ~/.local/bin/grimblast.sh --freeze copy area
-bind = Super+Alt, R, exec, ~/.local/bin/record-script.sh
-bind = Control+Alt, R, exec, ~/.local/bin/record-script.sh --fullscreen
-bind = Super+Shift+Alt, R, exec, ~/.local/bin/record-script.sh --fullscreen-sound
-bind = Super+Shift, C, exec, hyprpicker -a
+bind = Super_Shift_Alt, S, exec, grim -g "$(slurp)" - | swappy -f -
+bind=, Print, exec, ~/.local/bin/grimblast.sh copy area
+bind= Ctrl,Print, exec, ~/.local/bin/grimblast.sh copysave screen
+bind = Super_Shift, S, exec, ~/.local/bin/grimblast.sh --freeze copy area
+bind = Super_Alt, R, exec, ~/.local/bin/record-script.sh
+bind = Ctrl_Alt, R, exec, ~/.local/bin/record-script.sh --fullscreen
+bind = Super_Shift_Alt, R, exec, ~/.local/bin/record-script.sh --fullscreen-sound
+bind = Super_Shift, C, exec, hyprpicker -a
 bind = Super, V, exec, cliphist list | tofi | cliphist decode | wl-copy
-
-# Text-to-image
-# Normal
-bind = Control+Super+Shift,S,exec,grim -g "$(slurp $SLURP_ARGS)" "tmp.png" && tesseract "tmp.png" - | wl-copy && rm "tmp.png"
-# English
-bind = Super+Shift,T,exec,grim -g "$(slurp $SLURP_ARGS)" "tmp.png" && tesseract -l eng "tmp.png" - | wl-copy && rm "tmp.png"
-# Japanese
-bind = Super+Shift,J,exec,grim -g "$(slurp $SLURP_ARGS)" "tmp.png" && tesseract -l jpn "tmp.png" - | wl-copy && rm "tmp.png"
-bind = Super+Shift+Ctrl,J,exec,grim -g "$(slurp $SLURP_ARGS)" "tmp.png" && tesseract -l jpn_vert "tmp.png" - | wl-copy && rm "tmp.png"
+bind = Ctrl_Super_Shift,T,exec,~/.local/bin/im2txt
 
 # Media
-bindl= Super+Shift, N, exec, playerctl next || playerctl position `bc <<< "100 * $(playerctl metadata mpris:length) / 1000000 / 100"`
-bindl= ,XF86AudioNext, exec, playerctl next || playerctl position `bc <<< "100 * $(playerctl metadata mpris:length) / 1000000 / 100"`
-bind = Super+Shift+Alt, mouse:275, exec, playerctl previous
-bind = Super+Shift+Alt, mouse:276, exec, playerctl next || playerctl position `bc <<< "100 * $(playerctl metadata mpris:length) / 1000000 / 100"`
-bindl= Super+Shift, B, exec, playerctl previous
-bindl= Super+Shift, P, exec, playerctl play-pause
-bindl= ,XF86AudioPlay, exec, playerctl play-pause
+bindl= Super_Shift, N, exec, playerctl next || playerctl position `bc <<< "100 * $(playerctl metadata mpris:length) / 1000000 / 100"`
+bind = Super_Shift_Alt, mouse:275, exec, playerctl previous
+bind = Super_Shift_Alt, mouse:276, exec, playerctl next || playerctl position `bc <<< "100 * $(playerctl metadata mpris:length) / 1000000 / 100"`
+bindl= Super_Shift, B, exec, playerctl previous
+bindl= Super_Shift, P, exec, playerctl play-pause
 
 # Lock screen
 bind = Super, L, exec, loginctl lock-session
-bind = Super+Shift, L, exec, loginctl lock-session
-bindl = Super+Shift, L, exec, sleep 0.1 && systemctl suspend || loginctl suspend
+bind = Super_Shift, L, exec, loginctl lock-session
+bind = Super_Shift, L, exec, sleep 0.1 && systemctl suspend || loginctl suspend
 
 # Change / Open app
-bindir = Super, Super_L, exec, alacritty -e "$(tofi-run)"
-# bind = Alt, Space, exec, change-to-window
+bindir = , Super_L, exec, alacritty -e "$(tofi-run)"
+bind = Alt, Space, exec, change-to-window
 
 # ##################################### AGS keybinds #####################################
-# bindr = Control+Super, R, exec, killall ags ydotool; ags &
-# bindr = Control+Super+Alt, R, exec, hyprctl reload; killall ags ydotool; ags &
-# bind = Control+Alt, Slash, exec, ags run-js 'cycleMode();'
+# bindr = Ctrl_Super, R, exec, killall ags ydotool; ags &
+# bindr = Ctrl_Super_Alt, R, exec, hyprctl reload; killall ags ydotool; ags &
+# bind = Ctrl_Alt, Slash, exec, ags run-js 'cycleMode();'
 # bind = Super, Tab, exec, ags -t 'overview'
 # bind = Super, Slash, exec, for ((i=0; i<$(xrandr --listmonitors | grep -c 'Monitor'); i++)); do ags -t "cheatsheet""$i"; done
 # bind = Super, B, exec, ags -t 'sideleft'
 # bind = Super, A, exec, ags -t 'sideleft'
 # bind = Super, O, exec, ags -t 'sideleft'
 # bind = Super, N, exec, ags -t 'sideright'
-# bind = Super, M, exec, ags run-js 'openMusicControls.value = (!mpris.getPlayer() ? false : !openMusicControls.value);'
+# bind = Super, M, exec, ags run-js 'openMusicCtrls.value = (!mpris.getPlayer() ? false : !openMusicControls.value);'
 # bind = Super, Comma, exec, ags run-js 'openColorScheme.value = true; Utils.timeout(2000, () => openColorScheme.value = false);'
 # bind = Super, K, exec, for ((i=0; i<$(xrandr --listmonitors | grep -c 'Monitor'); i++)); do ags -t "osk""$i"; done
-# bind = Control+Alt, Delete, exec, for ((i=0; i<$(xrandr --listmonitors | grep -c 'Monitor'); i++)); do ags -t "session""$i"; done
-# bindle = , XF86AudioRaiseVolume, exec, ags run-js 'indicator.popup(1);'
-# bindle = , XF86AudioLowerVolume, exec, ags run-js 'indicator.popup(1);'
-# bindle=, XF86MonBrightnessUp, exec, ags run-js 'brightness.screen_value += 0.05; indicator.popup(1);'
-# bindle=, XF86MonBrightnessDown, exec, ags run-js 'brightness.screen_value -= 0.05; indicator.popup(1);'
-# bindl  = , XF86AudioMute, exec, ags run-js 'indicator.popup(1);'
+# bind = Ctrl+Alt, Delete, exec, for ((i=0; i<$(xrandr --listmonitors | grep -c 'Monitor'); i++)); do ags -t "session""$i"; done
 # bindl  = Super+Shift,M,   exec, ags run-js 'indicator.popup(1);'
 
 
 # ########################### Keybinds for Hyprland ############################
-# Swap windows
-bind = Super+Shift, left, movewindow, l
-bind = Super+Shift, right, movewindow, r
-bind = Super+Shift, up, movewindow, u
-bind = Super+Shift, down, movewindow, d
-bind = Super, P, pin
+
+#
+# Super -> focus movement
+# Super_Ctrl -> workspace movement
+# Super_Ctrl_Shift -> window + workspace movement
+# Super_Shift -> window movement, no workspace movement
 
 # Move focus
 bind = Super, left, movefocus, l
 bind = Super, right, movefocus, r
 bind = Super, up, movefocus, u
 bind = Super, down, movefocus, d
-bind = Super, BracketLeft, movefocus, l
-bind = Super, BracketRight, movefocus, r
 
-# Workspace, window, tab switch with keyboard
-bind = Control+Super, right, workspace, +1
-bind = Control+Super, left, workspace, -1
-bind = Control+Super, up, workspace, -5
-bind = Control+Super, down, workspace, +5
+# Switching Workspaces
+## Keyboard
+bind = Super_Ctrl, left, workspace, -1
+bind = Super_Ctrl, right, workspace, +1
+bind = Super_Ctrl, up, workspace, -5
+bind = Super_Ctrl, down, workspace, +5
+## Mouse
 bind = Super, mouse:275, workspace, -1
 bind = Super, mouse:276, workspace, +1
-bind = Control+Super, BracketLeft, workspace, -1
-bind = Control+Super, BracketRight, workspace, +1
-
-# Workspace, window, tab moves with keyboard
-bind = Control+Super+Shift, Right, movetoworkspace, +1
-bind = Control+Super+Shift, Left, movetoworkspace, -1
-bind = Super+Shift, mouse_down, movetoworkspace, -1
-bind = Super+Shift, mouse_up, movetoworkspace, +1
-
-# Scroll through existing workspaces with (Control) + Super + scroll
 bind = Super, mouse_up, workspace, +1
 bind = Super, mouse_down, workspace, -1
-bind = Control+Super, mouse_up, workspace, +1
-bind = Control+Super, mouse_down, workspace, -1
+## Workspaces groups (size:10)
+bind = Super, 1, exec, hyprscript workspace_action.sh workspace 1
+bind = Super, 2, exec, hyprscript workspace_action.sh workspace 2
+bind = Super, 3, exec, hyprscript workspace_action.sh workspace 3
+bind = Super, 4, exec, hyprscript workspace_action.sh workspace 4
+bind = Super, 5, exec, hyprscript workspace_action.sh workspace 5
+bind = Super, 6, exec, hyprscript workspace_action.sh workspace 6
+bind = Super, 7, exec, hyprscript workspace_action.sh workspace 7
+bind = Super, 8, exec, hyprscript workspace_action.sh workspace 8
+bind = Super, 9, exec, hyprscript workspace_action.sh workspace 9
+bind = Super, 0, exec, hyprscript workspace_action.sh workspace 10
+
+# Move + Switch
+bind = Super_Ctrl_Shift, left, movetoworkspace, -1
+bind = Super_Ctrl_Shift, right, movetoworkspace, +1
+bind = Super_Ctrl_Shift, up, movetoworkspace, -5
+bind = Super_Ctrl_Shift, down, movetoworkspace, +5
+bind = Super_Shift, mouse_down, movetoworkspace, -1
+bind = Super_Shift, mouse_up, movetoworkspace, +1
+## Workspaces groups (size:10)
+bind = Super_Ctrl_Shift, 1, exec, hyprscript workspace_action.sh movetoworkspace 1
+bind = Super_Ctrl_Shift, 2, exec, hyprscript workspace_action.sh movetoworkspace 2
+bind = Super_Ctrl_Shift, 3, exec, hyprscript workspace_action.sh movetoworkspace 3
+bind = Super_Ctrl_Shift, 4, exec, hyprscript workspace_action.sh movetoworkspace 4
+bind = Super_Ctrl_Shift, 5, exec, hyprscript workspace_action.sh movetoworkspace 5
+bind = Super_Ctrl_Shift, 6, exec, hyprscript workspace_action.sh movetoworkspace 6
+bind = Super_Ctrl_Shift, 7, exec, hyprscript workspace_action.sh movetoworkspace 7
+bind = Super_Ctrl_Shift, 8, exec, hyprscript workspace_action.sh movetoworkspace 8
+bind = Super_Ctrl_Shift, 9, exec, hyprscript workspace_action.sh movetoworkspace 9
+bind = Super_Ctrl_Shift, 0, exec, hyprscript workspace_action.sh movetoworkspace 10
+
+# Moving windows
+bind = Super_Shift, left, movewindow, l
+bind = Super_Shift, right, movewindow, r
+bind = Super_Shift, up, movewindow, u
+bind = Super_Shift, down, movewindow, d
+## Workspaces groups (size:10)
+bind = Super_Shift, 1, exec, hyprscript workspace_action.sh movetoworkspacesilent 1
+bind = Super_Shift, 2, exec, hyprscript workspace_action.sh movetoworkspacesilent 2
+bind = Super_Shift, 3, exec, hyprscript workspace_action.sh movetoworkspacesilent 3
+bind = Super_Shift, 4, exec, hyprscript workspace_action.sh movetoworkspacesilent 4
+bind = Super_Shift, 5, exec, hyprscript workspace_action.sh movetoworkspacesilent 5
+bind = Super_Shift, 6, exec, hyprscript workspace_action.sh movetoworkspacesilent 6
+bind = Super_Shift, 7, exec, hyprscript workspace_action.sh movetoworkspacesilent 7
+bind = Super_Shift, 8, exec, hyprscript workspace_action.sh movetoworkspacesilent 8
+bind = Super_Shift, 9, exec, hyprscript workspace_action.sh movetoworkspacesilent 9
+bind = Super_Shift, 0, exec, hyprscript workspace_action.sh movetoworkspacesilent 10
 
 # Move/resize windows with Super + LMB/RMB and dragging
 bindm = Super, mouse:272, movewindow
 bindm = Super, mouse:273, resizewindow
-bindm = Super, Z, movewindow
-bind = Control+Super, Backslash, resizeactive, exact 640 480
+bind = Super_Ctrl, Backslash, resizeactive, exact 640 480
 
 # Window split ratio
 binde = Super, Minus, splitratio, -0.1
 binde = Super, Equal, splitratio, 0.1
-binde = Super, Semicolon, splitratio, -0.1
-binde = Super, Apostrophe, splitratio, 0.1
 
 # Fullscreen
 bind = Super, F, fullscreen, 1
 bind = Super_Shift, F, fullscreen, 0
 
-# Switching
-bind = Super, 1, exec, ~/.config/ags/scripts/hyprland/workspace_action.sh workspace 1
-bind = Super, 2, exec, ~/.config/ags/scripts/hyprland/workspace_action.sh workspace 2
-bind = Super, 3, exec, ~/.config/ags/scripts/hyprland/workspace_action.sh workspace 3
-bind = Super, 4, exec, ~/.config/ags/scripts/hyprland/workspace_action.sh workspace 4
-bind = Super, 5, exec, ~/.config/ags/scripts/hyprland/workspace_action.sh workspace 5
-bind = Super, 6, exec, ~/.config/ags/scripts/hyprland/workspace_action.sh workspace 6
-bind = Super, 7, exec, ~/.config/ags/scripts/hyprland/workspace_action.sh workspace 7
-bind = Super, 8, exec, ~/.config/ags/scripts/hyprland/workspace_action.sh workspace 8
-bind = Super, 9, exec, ~/.config/ags/scripts/hyprland/workspace_action.sh workspace 9
-bind = Super, 0, exec, ~/.config/ags/scripts/hyprland/workspace_action.sh workspace 10
-bind = Control+Super, S, togglespecialworkspace,
+# Misc
+bind = Super, P, pin
 bind = Alt, Tab, cyclenext
 
-# Move window to workspace Super + Alt + [0-9]
-bind = Super+Alt, 1, exec, ~/.config/ags/scripts/hyprland/workspace_action.sh movetoworkspacesilent 1
-bind = Super+Alt, 2, exec, ~/.config/ags/scripts/hyprland/workspace_action.sh movetoworkspacesilent 2
-bind = Super+Alt, 3, exec, ~/.config/ags/scripts/hyprland/workspace_action.sh movetoworkspacesilent 3
-bind = Super+Alt, 4, exec, ~/.config/ags/scripts/hyprland/workspace_action.sh movetoworkspacesilent 4
-bind = Super+Alt, 5, exec, ~/.config/ags/scripts/hyprland/workspace_action.sh movetoworkspacesilent 5
-bind = Super+Alt, 6, exec, ~/.config/ags/scripts/hyprland/workspace_action.sh movetoworkspacesilent 6
-bind = Super+Alt, 7, exec, ~/.config/ags/scripts/hyprland/workspace_action.sh movetoworkspacesilent 7
-bind = Super+Alt, 8, exec, ~/.config/ags/scripts/hyprland/workspace_action.sh movetoworkspacesilent 8
-bind = Super+Alt, 9, exec, ~/.config/ags/scripts/hyprland/workspace_action.sh movetoworkspacesilent 9
-bind = Super+Alt, 0, exec, ~/.config/ags/scripts/hyprland/workspace_action.sh movetoworkspacesilent 10
-bind = Control+Shift+Super, Up, movetoworkspacesilent, special
-bind = Super+Alt, S, movetoworkspacesilent, special
-
+# Special workspace management
+bind = Ctrl_Shift_Super, Up, exec, hyprscript special_workspace_action.sh -p movetoworkspace
+bind = Super_Alt, S, exec, hyprscript special_workspace_action.sh -p movetoworkspacesilent
+bind = Ctrl_Super, S, exec, hyprscript special_workspace_action.sh togglespecialworkspace
