--- a/.config/hypr/hyprland/rules-windows.conf
+++ b/.config/hypr/hyprland/rules-windows.conf
@@ -1,24 +1,33 @@
 ######## Window rules ########
 # windowrule = noblur,.*
 # windowrule = opacity 0.89 override 0.89 override, .* # Applies transparency to EVERY WINDOW
-windowrule = opacity 0.89 override 0.89 override, (a|A)lacritty
-windowrule = float, ^(blueberry.py)$
-windowrule = float, ^(steam)$
-windowrule = float, ^(matplotlib)$
-windowrule = float, ^(guifetch)$ # FlafyDev/guifetch
-windowrulev2 = tile,class:(dev.warp.Warp)
-# windowrulev2 = move 100%-w 000%,class:(Alacritty)
-# windowrulev2 = float,class:(Alacritty)
-windowrulev2 = float, class:floating
 
-# Dialogs
-windowrule=float,title:^(Open File)(.*)$
-windowrule=float,title:^(Select a File)(.*)$
-# windowrule=float,title:^(Choose wallpaper)(.*)$
-windowrule=float,title:^(Open Folder)(.*)$
-windowrule=float,title:^(Save As)(.*)$
-# windowrule=float,title:^(Library)(.*)$
+# steam
+windowrule = float, ^steam$
+
+# matplotlib
+windowrule = float, ^matplotlib$
+
+# terminals
+windowrulev2 = opacity 0.89 override 0.89 override, class:Alacritty
+windowrulev2 = opacity 0.89 override 0.89 override, class:Floating:Alacritty
+windowrulev2 = float, class:Floating.*
+
+# imagemagick display
+windowrulev2 = float, title:ImageMagick.*
+windowrulev2 = center, title:ImageMagick.*
+
+
+# Dialogs (mainly upload / select file and so on)
+windowrulev2=float, title:.*(f|F)(ile|older).*, class:.*xdg.*
+windowrulev2=size 50% 50%, title:.*(f|F)(ile|older).*, class:.*xdg.*
+
+windowrulev2=float, title:Save As.*
+windowrulev2=size 50% 50%, title:Save As.*
+
+windowrulev2=float, title:Library, class:firefox
+windowrulev2=size 50% 50%, title:Library, class:firefox
 
 # Tearing
 windowrule=immediate,.*\.exe
-windowrulev2=immediate,class:(steam_app)
+windowrulev2=immediate, class:steam_app
