--- a/.config/systemd/user/wallpaper-daemon.service
+++ b/.config/systemd/user/wallpaper-daemon.service
@@ -7,7 +7,7 @@ After=graphical-session.target
 Type=exec
 ExecCondition=/lib/systemd/systemd-xdg-autostart-condition "Hyprland" ""
 ExecStart=/usr/bin/swww-daemon
-Restart=on-failure
+Restart=always
 Slice=background-graphical.slice
 
 [Install]
